--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
 
         <!-- [START gcm_listener_service] -->
         <service
-            android:name="kr.me.ansr.MyGcmListenerService"
+            android:name=".gcm.MyGcmListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -67,7 +67,7 @@
 
         <!-- [START instanceId_listener_service] -->
         <service
-            android:name="kr.me.ansr.MyInstanceIDListenerService"
+            android:name=".gcm.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
@@ -77,7 +77,7 @@
 
         <!-- [START gcm_registration_service] -->
         <service
-            android:name="kr.me.ansr.RegistrationIntentService"
+            android:name=".gcm.RegistrationIntentService"
             android:exported="false"></service>
         <!-- [END gcm_registration_service] -->
     </application>
