--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".login.LoginActivity" >
         </activity>
         <activity
+            android:name=".login.SplashBActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name=".login.SplashActivity"
             android:label="@string/title_activity_splash" >
             <intent-filter>
