--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,70 +8,64 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <!-- needed for older devices -
-     used to check app background / foreground status -->
+    <!--
+     needed for older devices -
+     used to check app background / foreground status
+    -->
     <uses-permission android:name="android.permission.GET_TASKS" />
     <!-- [START gcm_permission] -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <permission
         android:name="kr.me.ansr.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="kr.me.ansr.permission.C2D_MESSAGE" />
+
     <!-- [END gcm_permission] -->
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" android:name=".MyApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:name=".login.LoginActivity" >
-        </activity>
+            android:label="@string/app_name" />
+        <activity android:name=".login.LoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".login.SplashBActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".login.SplashActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/title_activity_splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.SignupActivity" >
-        </activity>
-        <activity android:name=".tab.board.detail.BoardDetailActivity"></activity>
-
+        <activity android:name=".login.SignupActivity" />
+        <activity android:name=".tab.board.detail.BoardDetailActivity" />
         <activity
             android:name=".tab.chat.socket.MainActivity"
-            android:label="@string/app_name"
-             >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".tab.chat.socket.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AppCompat"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateVisible" />
         <!-- ==================================== -->
         <activity
             android:name=".gcmchat.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".gcmchat.activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".gcmchat.activity.ChatRoomActivity"
             android:label="@string/title_activity_chat_room_discussion"
@@ -89,15 +83,17 @@
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="kr.me.ansr" />
             </intent-filter>
         </receiver>
         <!-- [END gcm_receiver] -->
 
-        <!--===================================== -->
-            <!-- [START gcm_listener_service] -->
-                <!-- .gcm.MyGcmListenerService.java...  -->
-            <!-- [END gcm_listener_service] -->
+
+        <!-- ===================================== -->
+        <!-- [START gcm_listener_service] -->
+        <!-- .gcm.MyGcmListenerService.java... -->
+        <!-- [END gcm_listener_service] -->
         <!-- [START instanceId_listener_service] -->
         <service
             android:name=".gcm.MyInstanceIDListenerService"
@@ -108,13 +104,15 @@
         </service>
         <!-- [END instanceId_listener_service] -->
 
+
         <!-- [START gcm_registration_service] -->
         <service
             android:name=".gcm.RegistrationIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
         <!-- [END gcm_registration_service] -->
 
-        <!--===================================== -->
+
+        <!-- ===================================== -->
         <service
             android:name=".gcmchat.gcm.MyGcmPushReceiver"
             android:exported="false">
@@ -122,19 +120,26 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
         <service
             android:name=".gcmchat.gcm.GcmIntentService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
-        </service><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        </service>
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <activity
+            android:name=".login.ScrollingActivity"
+            android:label="@string/title_activity_scrolling"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".login.SignupWayActivity"></activity>
     </application>
 
 </manifest>
