--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
-        <activity android:name=".login.LoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".login.SplashBActivity"
             android:label="@string/app_name" />
@@ -139,7 +139,10 @@
             android:name=".login.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".login.SignupWayActivity"></activity>
+        <activity
+            android:name=".login.SignupWayActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
