--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name" />
-        <activity android:name=".login.LoginActivity" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".login.SplashBActivity"
             android:label="@string/app_name" />
@@ -49,14 +52,6 @@
         </activity>
         <activity android:name=".login.SignupActivity" />
         <activity android:name=".tab.board.detail.BoardDetailActivity" />
-        <activity
-            android:name=".tab.chat.socket.MainActivity"
-            android:label="@string/app_name" />
-        <activity
-            android:name=".tab.chat.socket.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat"
-            android:windowSoftInputMode="adjustResize|stateVisible" />
         <!-- ==================================== -->
         <activity
             android:name=".gcmchat.activity.MainActivity"
@@ -141,6 +136,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".login.SignupWayActivity"
+            android:label="@string/title_activity_sign_up"
+            android:parentActivityName=".login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
