--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="kr.me.ansr.permission.C2D_MESSAGE" />
-
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- [END gcm_permission] -->
     <application
         android:name=".MyApplication"
@@ -33,8 +34,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -131,14 +132,22 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".login.ScrollingActivity"
-            android:label="@string/title_activity_scrolling"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".login.SignupWayActivity"
             android:label="@string/title_activity_sign_up"
             android:parentActivityName=".login.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".login.TermsActivity"
+            android:parentActivityName=".login.SignupWayActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".login.SignUpAccountActivity"
+            android:label="@string/title_activity_sign_up_account"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".login.LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="kr.me.ansr.login.LoginActivity" />
         </activity>
     </application>
 
