--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "kr.me.ansr"
-        minSdkVersion 11
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -35,9 +35,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile ('io.socket:socket.io-client:0.7.0') {
-        exclude group: 'org.json', module: 'json'
-    }
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
 
     //for NetworkManager
@@ -47,4 +44,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     //for gcm_chat req, res
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.sangcomz:FishBun:0.4.1@aar'
 }
