--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.me.ansr">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -24,6 +25,7 @@
     <uses-permission android:name="kr.me.ansr.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <!-- [END gcm_permission] -->
     <application
         android:name=".MyApplication"
@@ -143,12 +145,20 @@
         <activity
             android:name=".login.SignUpAccountActivity"
             android:label="@string/title_activity_sign_up_account"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".login.LoginActivity">
+            android:parentActivityName=".login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="kr.me.ansr.login.LoginActivity" />
         </activity>
+        <activity
+            android:name=".image.TakePhotoActivity"
+            android:label="@string/title_activity_take_photo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".image.MediaStoreActivity"
+            android:label="@string/title_activity_media_store"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
