--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     //for NetworkManager
     compile 'com.android.support:design:23.1.1'
+    //apache licence 2.0
+    compile 'com.squareup:otto:1.3.7'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
     compile 'com.google.code.gson:gson:2.6.2'
