--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.me.ansr">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -164,8 +165,15 @@
         <activity
             android:name=".tab.board.detail.BoardDetailActivity"
             android:label="@string/title_activity_board_detail"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".tab.board.BoardWriteActivity"
+            android:label="@string/title_activity_board_write"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".tab.friends.detail.FriendsDetailActivity"
+            android:label="@string/title_activity_friends_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
