--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.sangcomz:FishBun:0.4.1@aar'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
