--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.sangcomz:FishBun:0.4.1@aar'
-
+    compile ('com.sangcomz:FishBun:0.4.4@aar'){
+        transitive = true
+    }
     compile 'com.jakewharton:butterknife:7.0.1'
 }
