--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
         transitive = true
     }
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
 }
