--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile 'com.google.android.gms:play-services-analytics:8.3.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup:otto:1.3.7'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
@@ -64,4 +65,5 @@ dependencies {
     }
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
+
 }
