--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+//        multiDexEnabled = true
     }
 
     buildTypes {
@@ -38,8 +39,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //for NetworkManager
     //apache licence 2.0
     //for gcm_chat req, res
@@ -47,7 +47,6 @@ dependencies {
     compile files('libs/httpclient-4.3.6.jar')
     compile files('libs/httpcore-4.3.3.jar')
     compile files('libs/httpmime-4.3.6.jar')
-
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
@@ -60,10 +59,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile ('com.sangcomz:FishBun:0.4.4@aar'){
+    compile('com.sangcomz:FishBun:0.4.4@aar') {
         transitive = true
     }
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
-
+    //    compile 'com.github.chrisbanes:PhotoView:1.3.1'
+    compile 'com.commit451:PhotoView:1.2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('libs/3rdparty_login_library_android_4.1.4_source.jar')
 }
