--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,13 +74,12 @@
             android:name=".gcmchat.activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"/>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".gcmchat.activity.ChatRoomActivity"
             android:label="@string/title_activity_chat_room_discussion"
-            android:windowSoftInputMode="stateHidden|adjustResize"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <!-- ==================================== -->
         <!-- [START gcm_receiver] -->
         <receiver
@@ -169,18 +168,18 @@
         <activity
             android:name=".image.MediaStoreActivity"
             android:label="@string/title_activity_media_store"
-            android:windowSoftInputMode="stateHidden|adjustResize"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".tab.board.detail.BoardDetailActivity"
             android:label="@string/title_activity_board_detail"
-            android:windowSoftInputMode="stateHidden|adjustResize"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".tab.board.BoardWriteActivity"
             android:label="@string/title_activity_board_write"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
             android:name=".tab.friends.detail.FriendsDetailActivity"
             android:label="@string/title_activity_friends_detail"
@@ -205,7 +204,7 @@
             android:name=".tab.chat.plus.ChatPlusActivity"
             android:label="@string/title_activity_chat_plus"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
             android:name=".tab.friends.list.FriendsListActivity"
             android:label="@string/title_activity_friends_list"
@@ -225,7 +224,12 @@
         <activity
             android:name=".tab.mypage.setting.SettingActivity"
             android:label="@string/title_activity_setting"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".image.PinchZoomActivity"
+            android:label="@string/title_activity_pinch_zoom"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
