--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,5 @@ dependencies {
     //    compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile files('libs/3rdparty_login_library_android_4.1.4_source.jar')
+    compile files('libs/naver-oauth-login-4.1.4.1-with-sources.jar')
 }
