--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <!--
      needed for older devices -
      used to check app background / foreground status
@@ -23,14 +24,12 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="kr.me.ansr.permission.C2D_MESSAGE" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <!-- [END gcm_permission] -->
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/z_app_logo"
+        android:icon="@drawable/z_app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
